--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Extracteur de Domaines</title>
+    <title>Domain Extractor</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Extracteur de Domaines</h1>
+        <h1>Domain Extractor</h1>
 
         <div class="input-section">
-            <h2>Coller votre texte ici :</h2>
-            <textarea id="inputText" placeholder="Collez votre texte ici..."></textarea>
-            <button id="extractButton">Extraire les domaines</button>
+            <h2>Paste your text here:</h2>
+            <textarea id="inputText" placeholder="Paste your text here..."></textarea>
+            <button id="extractButton">Extract Domains</button>
         </div>
 
         <div class="upload-section">
-            <h2>Ou téléchargez un fichier texte :</h2>
+            <h2>Or upload a text file:</h2>
             <input type="file" id="fileInput" accept=".txt">
         </div>
 
         <div class="output-section">
-            <h2>Domaines trouvés :</h2>
-            <textarea id="outputDomains" readonly placeholder="Les domaines apparaîtront ici..."></textarea>
-            <button id="copyButton">Copier les domaines</button>
+            <h2>Found Domains:</h2>
+            <textarea id="outputDomains" readonly placeholder="Extracted domains will appear here..."></textarea>
+            <button id="copyButton">Copy Domains</button>
         </div>
     </div>
 
