--- a/index.html
+++ b/index.html
@@ -3,23 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Domain Extractor</title>
+    <title>Domain Tools</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Domain Extractor</h1>
+    <script src="https://cdn.tailwindcss.com"></script> </head>
+<body class="bg-gray-100 min-h-screen p-6">
+    <div class="max-w-4xl mx-auto bg-white p-8 rounded-2xl shadow-md">
+        <h1 class="text-3xl font-bold mb-6 text-center">Domain Tools</h1>
 
-        <div class="input-section">
-            <h2>Paste your text here:</h2>
-            <textarea id="inputText" placeholder="Paste your text here..."></textarea>
-            <button id="extractButton">Extract Domains</button>
+        <div class="flex justify-center mb-6 border-b border-gray-200">
+            <button id="extractorTab" class="px-6 py-3 text-lg font-medium text-gray-700 border-b-2 border-transparent hover:border-blue-600 hover:text-blue-600 focus:outline-none active-tab">Domain Extractor</button>
+            <button id="converterTab" class="ml-4 px-6 py-3 text-lg font-medium text-gray-700 border-b-2 border-transparent hover:border-blue-600 hover:text-blue-600 focus:outline-none">Domain Converter</button>
         </div>
 
-        <div class="output-section">
-            <h2>Found Domains:</h2>
-            <textarea id="outputDomains" readonly placeholder="Extracted domains will appear here..."></textarea>
-            <button id="copyButton">Copy Domains</button>
+        <div id="extractorSection" class="tool-section active-section">
+            <h2 class="text-2xl font-semibold mb-4 text-center">Domain Extractor</h2>
+
+            <div class="input-section">
+                <label class="block mb-2 font-medium">Paste your text here:</label>
+                <textarea id="inputText" placeholder="Paste your text here..." rows="10" class="w-full p-3 border rounded-lg mb-4"></textarea>
+                <button id="extractButton" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 w-full md:w-auto">Extract Domains</button>
+            </div>
+
+            <div class="output-section mt-6">
+                <h2 class="text-xl font-semibold mb-2">Found Domains:</h2>
+                <textarea id="outputDomains" readonly placeholder="Extracted domains will appear here..." rows="10" class="w-full p-3 border rounded-lg mb-4"></textarea>
+                <button id="copyExtractedButton" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 w-full md:w-auto">Copy Domains</button>
+            </div>
+        </div>
+
+        <div id="converterSection" class="tool-section hidden">
+            <h2 class="text-2xl font-semibold mb-4 text-center">Domain Extension Converter</h2>
+
+            <label class="block mb-2 font-medium">Paste .com domains (one per line):</label>
+            <textarea id="domainInput" rows="8" class="w-full p-3 border rounded-lg mb-4" placeholder="example.com&#10;test.com"></textarea>
+
+            <label class="block mb-2 font-medium">Choose extensions to convert to:</label>
+            <div class="flex flex-wrap gap-4 mb-4">
+                <label><input type="checkbox" class="extCheckbox" value=".net" checked> .net</label>
+                <label><input type="checkbox" class="extCheckbox" value=".co" checked> .co</label>
+                <label><input type="checkbox" class="extCheckbox" value=".co.in"> .co.in</label>
+                <label><input type="checkbox" class="extCheckbox" value=".in"> .in</label>
+                <label><input type="checkbox" class="extCheckbox" value=".us"> .us</label>
+            </div>
+
+            <button id="convertButton" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 w-full md:w-auto">Convert</button>
+
+            <div id="converterResultSection" class="mt-6 hidden">
+                <h2 class="text-xl font-semibold mb-2">Converted Domains:</h2>
+                <textarea id="converterResultOutput" rows="10" class="w-full p-3 border rounded-lg mb-4" readonly></textarea>
+                <div class="flex gap-4 flex-wrap">
+                    <button id="copyConvertedButton" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 w-full md:w-auto">Copy</button>
+                    <button id="downloadCSVButton" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700 w-full md:w-auto">Download CSV</button>
+                </div>
+            </div>
         </div>
     </div>
 
