--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Domain Tools</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.tailwindcss.com"></script> </head>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
 <body class="bg-gray-100 min-h-screen p-6">
     <div class="max-w-4xl mx-auto bg-white p-8 rounded-2xl shadow-md">
         <h1 class="text-3xl font-bold mb-6 text-center">Domain Tools</h1>
 
         <div class="flex justify-center mb-6 border-b border-gray-200">
-            <button id="extractorTab" class="px-6 py-3 text-lg font-medium text-gray-700 border-b-2 border-transparent hover:border-blue-600 hover:text-blue-600 focus:outline-none active-tab">Domain Extractor</button>
+            <button id="extractorTab" class="px-6 py-3 text-lg font-medium text-gray-700 border-b-2 border-transparent hover:border-blue-600 hover:text-blue-600 focus:outline-none">Domain Extractor</button>
             <button id="converterTab" class="ml-4 px-6 py-3 text-lg font-medium text-gray-700 border-b-2 border-transparent hover:border-blue-600 hover:text-blue-600 focus:outline-none">Domain Converter</button>
         </div>
 
-        <div id="extractorSection" class="tool-section active-section">
+        <div id="extractorSection" class="tool-section">
             <h2 class="text-2xl font-semibold mb-4 text-center">Domain Extractor</h2>
 
             <div class="input-section">
