--- a/index.html
+++ b/index.html
@@ -1,138 +1,183 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Domain Tools</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Domain Tools - Tabs</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 min-h-screen p-6">
-  <div class="max-w-4xl mx-auto bg-white p-8 rounded-2xl shadow-md">
-    <h1 class="text-2xl font-bold mb-6 text-center">Domain Tools</h1>
+<body class="bg-gradient-to-b from-indigo-50 to-white min-h-screen p-10 font-sans">
 
-    <!-- Tabs -->
-    <div class="flex gap-4 mb-6">
-      <button onclick="switchTab('extract')" class="tab-btn bg-blue-600 text-white px-4 py-2 rounded">Extract Domains</button>
-      <button onclick="switchTab('convert')" class="tab-btn bg-gray-200 text-black px-4 py-2 rounded">Convert Extensions</button>
+  <div class="max-w-5xl mx-auto">
+    <h1 class="text-5xl font-extrabold text-center mb-12 text-indigo-900 drop-shadow-md">Domain Tools</h1>
+
+    <!-- Tabs Buttons -->
+    <div class="flex justify-center space-x-4 mb-10">
+      <button id="tabExtractBtn" class="tab-btn px-6 py-3 rounded-xl font-semibold text-indigo-700 bg-indigo-200 hover:bg-indigo-300 focus:outline-none" onclick="switchTab('extract')">Extract Domains</button>
+      <button id="tabConvertBtn" class="tab-btn px-6 py-3 rounded-xl font-semibold text-gray-600 hover:bg-indigo-100 focus:outline-none" onclick="switchTab('convert')">Convert Extensions</button>
+      <button id="tabOpenBtn" class="tab-btn px-6 py-3 rounded-xl font-semibold text-gray-600 hover:bg-indigo-100 focus:outline-none" onclick="switchTab('open')">Open All URLs</button>
     </div>
 
-    <!-- Extract Tab -->
-    <div id="extractTab">
-      <label class="block mb-2 font-medium">Paste your text:</label>
-      <textarea id="inputText" rows="8" class="w-full p-3 border rounded-lg mb-4" placeholder="Paste any text here..."></textarea>
+    <!-- Extract Domains Content -->
+    <section id="tabExtract" class="tab-content bg-white p-10 rounded-3xl shadow-xl border border-indigo-100">
+      <label class="block mb-2 font-semibold text-indigo-700">Paste your text:</label>
+      <textarea id="inputText" rows="8" class="w-full p-5 border border-indigo-300 rounded-xl mb-6 resize-none shadow-inner focus:ring-2 focus:ring-indigo-400" placeholder="Paste any text here..."></textarea>
+      <button onclick="extractDomains()" class="bg-indigo-700 text-white px-10 py-3 rounded-xl hover:bg-indigo-800 shadow-lg transition">Extract Domains</button>
 
-      <button onclick="extractDomains()" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">Extract Domains</button>
+      <h3 class="text-2xl font-semibold mt-12 mb-4 text-indigo-800">Extracted Domains:</h3>
+      <textarea id="outputText" rows="10" class="w-full p-5 border border-indigo-300 rounded-xl mb-5 resize-none shadow-inner" readonly></textarea>
+      <button onclick="copyToClipboard()" class="bg-green-600 text-white px-8 py-3 rounded hover:bg-green-700 shadow-md transition">Copy Extracted Domains</button>
+    </section>
 
-      <div class="mt-6">
-        <h2 class="text-xl font-semibold mb-2">Extracted Domains:</h2>
-        <textarea id="outputText" rows="10" class="w-full p-3 border rounded-lg mb-4" readonly></textarea>
-        <button onclick="copyToClipboard()" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Copy</button>
+    <!-- Convert Extensions Content -->
+    <section id="tabConvert" class="tab-content hidden bg-white p-10 rounded-3xl shadow-xl border border-indigo-100">
+      <label class="block mb-2 font-semibold text-indigo-700">Paste .com domains (one per line):</label>
+      <textarea id="domainInput" rows="8" class="w-full p-5 border border-indigo-300 rounded-xl mb-6 resize-none shadow-inner focus:ring-2 focus:ring-indigo-400" placeholder="example.com&#10;test.com"></textarea>
+
+      <label class="block mb-2 font-semibold text-indigo-700">Choose extensions to convert to:</label>
+      <div class="flex flex-wrap gap-6 mb-8">
+        <label class="flex items-center gap-3 cursor-pointer">
+          <input type="checkbox" class="extCheckbox" value=".net" checked />
+          <span class="text-indigo-800 font-medium select-none">.net</span>
+        </label>
+        <label class="flex items-center gap-3 cursor-pointer">
+          <input type="checkbox" class="extCheckbox" value=".co" checked />
+          <span class="text-indigo-800 font-medium select-none">.co</span>
+        </label>
+        <label class="flex items-center gap-3 cursor-pointer">
+          <input type="checkbox" class="extCheckbox" value=".co.in" />
+          <span class="text-indigo-800 font-medium select-none">.co.in</span>
+        </label>
+        <label class="flex items-center gap-3 cursor-pointer">
+          <input type="checkbox" class="extCheckbox" value=".in" />
+          <span class="text-indigo-800 font-medium select-none">.in</span>
+        </label>
+        <label class="flex items-center gap-3 cursor-pointer">
+          <input type="checkbox" class="extCheckbox" value=".us" />
+          <span class="text-indigo-800 font-medium select-none">.us</span>
+        </label>
       </div>
-    </div>
 
-    <!-- Convert Tab -->
-    <div id="convertTab" class="hidden">
-      <label class="block mb-2 font-medium">Paste .com domains (one per line):</label>
-      <textarea id="domainInput" rows="8" class="w-full p-3 border rounded-lg mb-4" placeholder="example.com&#10;test.com"></textarea>
+      <button onclick="convertDomains()" class="bg-indigo-700 text-white px-10 py-3 rounded-xl hover:bg-indigo-800 shadow-lg transition mb-8">Convert Domains</button>
 
-      <label class="block mb-2 font-medium">Choose extensions to convert to:</label>
-      <div class="flex flex-wrap gap-4 mb-4">
-        <label><input type="checkbox" class="extCheckbox" value=".net" checked> .net</label>
-        <label><input type="checkbox" class="extCheckbox" value=".co" checked> .co</label>
-        <label><input type="checkbox" class="extCheckbox" value=".co.in"> .co.in</label>
-        <label><input type="checkbox" class="extCheckbox" value=".in"> .in</label>
-        <label><input type="checkbox" class="extCheckbox" value=".us"> .us</label>
+      <h3 class="text-2xl font-semibold mb-4 text-indigo-800">Converted Domains:</h3>
+      <textarea id="resultOutput" rows="10" class="w-full p-5 border border-indigo-300 rounded-xl mb-5 resize-none shadow-inner" readonly></textarea>
+      <div class="flex gap-6">
+        <button onclick="copyResults()" class="bg-green-600 text-white px-8 py-3 rounded hover:bg-green-700 shadow-md transition">Copy Converted Domains</button>
+        <button onclick="downloadCSV()" class="bg-gray-700 text-white px-8 py-3 rounded hover:bg-gray-800 shadow-md transition">Download CSV</button>
       </div>
+    </section>
 
-      <button onclick="convertDomains()" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">Convert</button>
-
-      <div id="resultSection" class="mt-6 hidden">
-        <h2 class="text-xl font-semibold mb-2">Converted Domains:</h2>
-        <textarea id="resultOutput" rows="10" class="w-full p-3 border rounded-lg mb-4" readonly></textarea>
-        <div class="flex gap-4">
-          <button onclick="copyResults()" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Copy</button>
-          <button onclick="downloadCSV()" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">Download CSV</button>
-        </div>
-      </div>
-    </div>
+    <!-- Open Bulk URLs Content -->
+    <section id="tabOpen" class="tab-content hidden bg-white p-10 rounded-3xl shadow-xl border border-indigo-100">
+      <label class="block mb-2 font-semibold text-indigo-700">Paste domains or URLs (one per line):</label>
+      <textarea id="bulkOpenInput" rows="6" class="w-full p-5 border border-indigo-300 rounded-xl mb-6 resize-none shadow-inner focus:ring-2 focus:ring-indigo-400" placeholder="example.com&#10;https://test.com"></textarea>
+      <button onclick="openBulkUrls()" class="bg-purple-700 text-white px-10 py-3 rounded-xl hover:bg-purple-800 shadow-lg transition">Open All URLs</button>
+    </section>
   </div>
 
-  <script>
-    function switchTab(tab) {
-      document.getElementById('extractTab').classList.add('hidden');
-      document.getElementById('convertTab').classList.add('hidden');
-      document.querySelectorAll('.tab-btn').forEach(btn => btn.classList.remove('bg-blue-600', 'text-white'));
-      if (tab === 'extract') {
-        document.getElementById('extractTab').classList.remove('hidden');
-        document.querySelectorAll('.tab-btn')[0].classList.add('bg-blue-600', 'text-white');
-      } else {
-        document.getElementById('convertTab').classList.remove('hidden');
-        document.querySelectorAll('.tab-btn')[1].classList.add('bg-blue-600', 'text-white');
+<script>
+  function switchTab(tab) {
+    const tabs = ['extract', 'convert', 'open'];
+    tabs.forEach(t => {
+      document.getElementById('tab' + capitalize(t)).classList.add('hidden');
+      document.getElementById('tab' + capitalize(t) + 'Btn').classList.remove('bg-indigo-200', 'text-indigo-700');
+      document.getElementById('tab' + capitalize(t) + 'Btn').classList.add('text-gray-600');
+    });
+
+    document.getElementById('tab' + capitalize(tab)).classList.remove('hidden');
+    const btn = document.getElementById('tab' + capitalize(tab) + 'Btn');
+    btn.classList.add('bg-indigo-200', 'text-indigo-700');
+    btn.classList.remove('text-gray-600');
+  }
+
+  function capitalize(s) {
+    return s.charAt(0).toUpperCase() + s.slice(1);
+  }
+
+  // Extract Domains
+  function extractDomains() {
+    const text = document.getElementById("inputText").value;
+    const domainRegex = /\b(?:[a-z0-9](?:[a-z0-9-]{0,61}[a-z0-9])?\.)+(?:[a-z]{2,})\b/gi;
+    const domains = text.match(domainRegex);
+    const unique = [...new Set(domains || [])];
+    document.getElementById("outputText").value = unique.join("\n");
+  }
+
+  function copyToClipboard() {
+    const output = document.getElementById("outputText");
+    output.select();
+    document.execCommand("copy");
+    alert("Copied to clipboard!");
+  }
+
+  // Convert Extensions
+  function convertDomains() {
+    const input = document.getElementById('domainInput').value.trim();
+    const tlds = Array.from(document.querySelectorAll('.extCheckbox:checked')).map(cb => cb.value);
+    const resultOutput = document.getElementById('resultOutput');
+
+    if (!input) {
+      alert('Please enter at least one .com domain.');
+      return;
+    }
+
+    if (tlds.length === 0) {
+      alert('Please select at least one extension.');
+      return;
+    }
+
+    const lines = input.split(/\r?\n/).map(line => line.trim()).filter(Boolean);
+    let results = [];
+
+    for (const domain of lines) {
+      if (domain.endsWith('.com')) {
+        const base = domain.replace(/\.com$/, '');
+        tlds.forEach(ext => {
+          results.push(base + ext);
+        });
       }
     }
 
-    function extractDomains() {
-      const text = document.getElementById("inputText").value;
-      const domainRegex = /\b(?:[a-z0-9](?:[a-z0-9-]{0,61}[a-z0-9])?\.)+(?:[a-z]{2,})\b/gi;
-      const domains = text.match(domainRegex);
-      const unique = [...new Set(domains || [])];
-      document.getElementById("outputText").value = unique.join("\n");
+    resultOutput.value = results.join("\n");
+  }
+
+  function copyResults() {
+    const resultOutput = document.getElementById('resultOutput');
+    resultOutput.select();
+    document.execCommand('copy');
+    alert('Copied to clipboard!');
+  }
+
+  function downloadCSV() {
+    const result = document.getElementById('resultOutput').value;
+    const blob = new Blob([result], { type: 'text/csv;charset=utf-8;' });
+    const link = document.createElement('a');
+    link.href = URL.createObjectURL(blob);
+    link.download = 'converted_domains.csv';
+    link.click();
+  }
+
+  // Open Bulk URLs
+  function openBulkUrls() {
+    const bulkInput = document.getElementById('bulkOpenInput').value.trim();
+    if (!bulkInput) {
+      alert('Please paste at least one domain to open.');
+      return;
     }
-
-    function copyToClipboard() {
-      const output = document.getElementById("outputText");
-      output.select();
-      document.execCommand("copy");
-      alert("Copied to clipboard!");
-    }
-
-    function convertDomains() {
-      const input = document.getElementById('domainInput').value.trim();
-      const tlds = Array.from(document.querySelectorAll('.extCheckbox:checked')).map(cb => cb.value);
-      const resultOutput = document.getElementById('resultOutput');
-      const resultSection = document.getElementById('resultSection');
-
-      if (!input) {
-        alert('Please enter at least one .com domain.');
-        return;
+    const urls = bulkInput.split(/\r?\n/).map(url => url.trim()).filter(Boolean);
+    urls.forEach(url => {
+      let fixedUrl = url;
+      if (!/^https?:\/\//i.test(url)) {
+        fixedUrl = "https://" + url;
       }
+      window.open(fixedUrl, '_blank');
+    });
+  }
 
-      if (tlds.length === 0) {
-        alert('Please select at least one extension.');
-        return;
-      }
+  // Initialize: Show Extract tab by default
+  switchTab('extract');
+</script>
 
-      const lines = input.split(/\r?\n/).map(line => line.trim()).filter(Boolean);
-      let results = [];
-
-      for (const domain of lines) {
-        if (domain.endsWith('.com')) {
-          const base = domain.replace(/\.com$/, '');
-          tlds.forEach(ext => {
-            results.push(base + ext);
-          });
-        }
-      }
-
-      resultOutput.value = results.join("\n");
-      resultSection.classList.remove("hidden");
-    }
-
-    function copyResults() {
-      const resultOutput = document.getElementById('resultOutput');
-      resultOutput.select();
-      document.execCommand('copy');
-      alert('Copied to clipboard!');
-    }
-
-    function downloadCSV() {
-      const result = document.getElementById('resultOutput').value;
-      const blob = new Blob([result], { type: 'text/csv;charset=utf-8;' });
-      const link = document.createElement('a');
-      link.href = URL.createObjectURL(blob);
-      link.download = 'converted_domains.csv';
-      link.click();
-    }
-  </script>
 </body>
 </html>
